<?xml version="1.0"?>
<package>
  <name>experiments_loop_functions</name>
  <version>0.0.0</version>
  <description>ROS for ArGoS3</description>

  <maintainer email="mkegelei@ulb.ac.be">Miquel Kegeleirs</maintainer>


  <license>TODO</license>

  <author email="mkegelei@ulb.ac.be">Miquel Kegeleirs</author>

  <build_depend>message_generation</build_depend>
 
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
